--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -74,6 +74,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="generate\QueryModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>QueryModel.cs</LastGenOutput>
