--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -88,6 +88,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="generate\Service.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Service.cs</LastGenOutput>
